configure_file(StarVersion.cpp.in ${CMAKE_CURRENT_BINARY_DIR}/StarVersion.cpp @ONLY)

add_library(star_core STATIC
        ${CMAKE_CURRENT_BINARY_DIR}/StarVersion.cpp
        StarAStar.hpp
        StarAlgorithm.hpp
        StarArray.hpp
        StarAssetPath.cpp
        StarAssetPath.hpp
        StarAtomicSharedPtr.hpp
        StarAudio.cpp
        StarAudio.hpp
        StarBTree.hpp
        StarBTreeDatabase.cpp
        StarBTreeDatabase.hpp
        StarBiMap.hpp
        StarBlockAllocator.hpp
        StarBuffer.cpp
        StarBuffer.hpp
        StarByteArray.cpp
        StarByteArray.hpp
        StarBytes.hpp
        StarCasting.hpp
        StarColor.cpp
        StarColor.hpp
        StarCompression.cpp
        StarCompression.hpp
        StarConfig.hpp
        StarCurve25519.cpp
        StarCurve25519.hpp
        StarDataStream.cpp
        StarDataStream.hpp
        StarDataStreamDevices.cpp
        StarDataStreamDevices.hpp
        StarDataStreamExtra.hpp
        StarDirectives.cpp
        StarDirectives.hpp
        StarDynamicLib.hpp
        StarEither.hpp
        StarEncode.cpp
        StarEncode.hpp
        StarException.hpp
        StarFile.cpp
        StarFile.hpp
        StarFlatHashMap.hpp
        StarFlatHashSet.hpp
        StarFont.cpp
        StarFont.hpp
        StarFormat.hpp
        StarFormattedJson.cpp
        StarFormattedJson.hpp
        StarHash.hpp
        StarHostAddress.cpp
        StarHostAddress.hpp
        StarIODevice.cpp
        StarIODevice.hpp
        StarIdMap.hpp
        StarImage.cpp
        StarImage.hpp
        StarImageProcessing.cpp
        StarImageProcessing.hpp
        StarInputEvent.cpp
        StarInputEvent.hpp
        StarInterpolation.hpp
        StarIterator.hpp
        StarJson.cpp
        StarJson.hpp
        StarJsonBuilder.cpp
        StarJsonBuilder.hpp
        StarJsonExtra.cpp
        StarJsonExtra.hpp
        StarJsonParser.hpp
        StarJsonPatch.cpp
        StarJsonPatch.hpp
        StarJsonPath.cpp
        StarJsonPath.hpp
        StarJsonRpc.cpp
        StarJsonRpc.hpp
        StarLexicalCast.hpp
        StarLine.hpp
        StarList.hpp
        StarListener.cpp
        StarListener.hpp
        StarLockFile.hpp
        StarLogging.cpp
        StarLogging.hpp
        StarLruCache.hpp
        StarLua.cpp
        StarLua.hpp
        StarLuaConverters.cpp
        StarLuaConverters.hpp
        StarMap.hpp
        StarMathCommon.hpp
        StarMatrix3.hpp
        StarMaybe.hpp
        StarMemory.cpp
        StarMemory.hpp
        StarMultiArray.hpp
        StarMultiArrayInterpolator.hpp
        StarMultiTable.hpp
        StarNetElement.cpp
        StarNetElement.hpp
        StarNetElementBasicFields.cpp
        StarNetElementBasicFields.hpp
        StarNetElementContainers.hpp
        StarNetElementDynamicGroup.hpp
        StarNetElementFloatFields.hpp
        StarNetElementGroup.cpp
        StarNetElementGroup.hpp
        StarNetElementSignal.hpp
        StarNetElementSyncGroup.cpp
        StarNetElementSyncGroup.hpp
        StarNetElementSystem.hpp
        StarNetElementTop.hpp
        StarNetImpl.hpp
        StarObserverStream.hpp
        StarOptionParser.cpp
        StarOptionParser.hpp
        StarOrderedMap.hpp
        StarOrderedSet.hpp
        StarOutputProxy.hpp
        StarParametricFunction.hpp
        StarPch.hpp
        StarPeriodic.hpp
        StarPeriodicFunction.hpp
        StarPerlin.cpp
        StarPerlin.hpp
        StarPoly.hpp
        StarPythonic.hpp
        StarRandom.cpp
        StarRandom.hpp
        StarRandomPoint.hpp
        StarRect.hpp
        StarRefPtr.hpp
        StarRpcPromise.hpp
        StarRpcThreadPromise.hpp
        StarSectorArray2D.hpp
        StarSecureRandom.hpp
        StarSet.hpp
        StarSha256.cpp
        StarSha256.hpp
        StarShellParser.cpp
        StarShellParser.hpp
        StarSignalHandler.hpp
        StarSocket.cpp
        StarSocket.hpp
        StarSpatialHash2D.hpp
        StarSpline.hpp
        StarStaticRandom.hpp
        StarStaticVector.hpp
        StarString.cpp
        StarString.hpp
        StarStringView.cpp
        StarStringView.hpp
        StarStrongTypedef.hpp
        StarTcp.cpp
        StarTcp.hpp
        StarText.cpp
        StarText.hpp
        StarThread.cpp
        StarThread.hpp
        StarTickRateMonitor.cpp
        StarTickRateMonitor.hpp
        StarTime.cpp
        StarTime.hpp
        StarTtlCache.hpp
        StarUdp.cpp
        StarUdp.hpp
        StarUnicode.cpp
        StarUnicode.hpp
        StarUuid.cpp
        StarUuid.hpp
        StarVector.hpp
        StarVersion.hpp
        StarVlqEncoding.hpp
        StarWeightedPool.hpp
        StarWorkerPool.cpp
        StarWorkerPool.hpp
        StarXXHash.hpp
        scripting/StarUtilityLuaBindings.cpp
        scripting/StarUtilityLuaBindings.hpp
)

if(STAR_SYSTEM_FAMILY_UNIX)
    target_sources(star_core
            PUBLIC
            StarDynamicLib_unix.cpp
            StarException_unix.cpp
            StarFile_unix.cpp
            StarLockFile_unix.cpp
            StarSecureRandom_unix.cpp
            StarSignalHandler_unix.cpp
            StarThread_unix.cpp
            StarTime_unix.cpp
    )
elseif(STAR_SYSTEM_FAMILY_WINDOWS)
    target_sources(star_core
            PUBLIC
            StarString_windows.hpp
            StarDynamicLib_windows.cpp
            StarFile_windows.cpp
            StarLockFile_windows.cpp
            StarSignalHandler_windows.cpp
            StarString_windows.cpp
            StarThread_windows.cpp
            StarTime_windows.cpp
            StarException_windows.cpp
            StarSecureRandom_windows.cpp
    )
endif()

target_include_directories(star_core
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/scripting
)

target_link_libraries(star_core
        PUBLIC
        Star::Extern
)

target_precompile_headers(star_core PUBLIC StarPch.hpp)

add_library(Star::Core ALIAS star_core)
