add_library(star_frontend STATIC
        StarActionBar.cpp
        StarActionBar.hpp
        StarAiInterface.cpp
        StarAiInterface.hpp
        StarBaseScriptPane.cpp
        StarBaseScriptPane.hpp
        StarBindingsMenu.cpp
        StarBindingsMenu.hpp
        StarBookmarkInterface.cpp
        StarBookmarkInterface.hpp
        StarCharCreation.cpp
        StarCharCreation.hpp
        StarCharSelection.cpp
        StarCharSelection.hpp
        StarChat.cpp
        StarChat.hpp
        StarChatBubbleManager.cpp
        StarChatBubbleManager.hpp
        StarChatBubbleSeparation.cpp
        StarChatBubbleSeparation.hpp
        StarCinematic.cpp
        StarCinematic.hpp
        StarClientCommandProcessor.cpp
        StarClientCommandProcessor.hpp
        StarCodexInterface.cpp
        StarCodexInterface.hpp
        StarConfirmationDialog.cpp
        StarConfirmationDialog.hpp
        StarContainerInteractor.cpp
        StarContainerInteractor.hpp
        StarContainerInterface.cpp
        StarContainerInterface.hpp
        StarCraftingInterface.cpp
        StarCraftingInterface.hpp
        StarErrorScreen.cpp
        StarErrorScreen.hpp
        StarGraphicsMenu.cpp
        StarGraphicsMenu.hpp
        StarInterfaceCursor.cpp
        StarInterfaceCursor.hpp
        StarInterfaceLuaBindings.cpp
        StarInterfaceLuaBindings.hpp
        StarInventory.cpp
        StarInventory.hpp
        StarItemTooltip.cpp
        StarItemTooltip.hpp
        StarJoinRequestDialog.cpp
        StarJoinRequestDialog.hpp
        StarKeybindingsMenu.cpp
        StarKeybindingsMenu.hpp
        StarMainInterface.cpp
        StarMainInterface.hpp
        StarMainInterfaceTypes.cpp
        StarMainInterfaceTypes.hpp
        StarMainMixer.cpp
        StarMainMixer.hpp
        StarMerchantInterface.cpp
        StarMerchantInterface.hpp
        StarModsMenu.cpp
        StarModsMenu.hpp
        StarNameplatePainter.cpp
        StarNameplatePainter.hpp
        StarOptionsMenu.cpp
        StarOptionsMenu.hpp
        StarPopupInterface.cpp
        StarPopupInterface.hpp
        StarQuestIndicatorPainter.cpp
        StarQuestIndicatorPainter.hpp
        StarQuestInterface.cpp
        StarQuestInterface.hpp
        StarQuestTracker.cpp
        StarQuestTracker.hpp
        StarRadioMessagePopup.cpp
        StarRadioMessagePopup.hpp
        StarScriptPane.cpp
        StarScriptPane.hpp
        StarSimpleTooltip.cpp
        StarSimpleTooltip.hpp
        StarSongbookInterface.cpp
        StarSongbookInterface.hpp
        StarStatusPane.cpp
        StarStatusPane.hpp
        StarTeamBar.cpp
        StarTeamBar.hpp
        StarTeleportDialog.cpp
        StarTeleportDialog.hpp
        StarTitleScreen.cpp
        StarTitleScreen.hpp
        StarVoice.cpp
        StarVoice.hpp
        StarVoiceLuaBindings.cpp
        StarVoiceLuaBindings.hpp
        StarVoiceSettingsMenu.cpp
        StarVoiceSettingsMenu.hpp
        StarWireInterface.cpp
        StarWireInterface.hpp
)

target_include_directories(star_frontend
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(star_frontend
        PUBLIC
        Star::Windowing
)

target_precompile_headers(star_frontend REUSE_FROM star_core)

add_library(Star::Frontend ALIAS star_frontend)
